--- a/hello.html
+++ b/hello.html
@@ -2,16 +2,13 @@
 <<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    Hello World, Motha Fucc
+    Hello World
     <meta charset="utf-8">
     <title>  MY Web Site !</title>
   </head>
   <body>
-    Hi Mother Fucc, sorry
-   hellooosoos
+ 
   </body>
-
-  <li> Fist of all bitchs </Li>
     
 </html>>
 </
